[gd_scene load_steps=13 format=3 uid="uid://dsqf0cfxbwbne"]

[ext_resource type="Shader" path="res://lightning.gdshader" id="1_mrluq"]
[ext_resource type="Script" path="res://scripts/charge_up_challenge.gd" id="1_y0wb4"]
[ext_resource type="AudioStream" uid="uid://boicxtlmhtdyf" path="res://sounds/393066__wakerone__electric-zap-electricity-2.wav" id="2_u3xwc"]
[ext_resource type="Script" path="res://scripts/lightning.gd" id="3_30nep"]
[ext_resource type="Script" path="res://scripts/buzz.gd" id="3_g4tls"]
[ext_resource type="Script" path="res://scripts/charge_up_challenge_buttom.gd" id="4_lq11b"]
[ext_resource type="Texture2D" uid="uid://j6t0wh66mbf8" path="res://assets/center_button.png" id="4_y43om"]
[ext_resource type="Script" path="res://scripts/lightning_horiz.gd" id="8_qnjbp"]

[sub_resource type="CircleShape2D" id="CircleShape2D_q5kuc"]
radius = 53.1507

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8q7ar"]
shader = ExtResource("1_mrluq")
shader_parameter/lightning_number = 5
shader_parameter/amplitude = Vector2(2, 1)
shader_parameter/offset = 0.45
shader_parameter/thickness = 0.04
shader_parameter/speed = 3.0
shader_parameter/base_color = Color(1, 1, 1, 1)
shader_parameter/glow_thickness = 0.08
shader_parameter/glow_color = Color(0.2, 0, 0.8, 0)
shader_parameter/alpha = 0.275

[sub_resource type="ShaderMaterial" id="ShaderMaterial_o0xpl"]
shader = ExtResource("1_mrluq")
shader_parameter/lightning_number = 5
shader_parameter/amplitude = Vector2(2, 1)
shader_parameter/offset = 0.45
shader_parameter/thickness = 0.04
shader_parameter/speed = 3.0
shader_parameter/base_color = Color(1, 1, 1, 1)
shader_parameter/glow_thickness = 0.08
shader_parameter/glow_color = Color(0.2, 0, 0.8, 0)
shader_parameter/alpha = 0.275

[sub_resource type="CanvasTexture" id="CanvasTexture_ufmxc"]

[node name="charge_up_challenge" type="Node2D"]
script = ExtResource("1_y0wb4")

[node name="Buzz" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_u3xwc")
pitch_scale = 0.81
autoplay = true
script = ExtResource("3_g4tls")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(160, 301)
script = ExtResource("4_lq11b")

[node name="CenterButton" type="Sprite2D" parent="Area2D"]
modulate = Color(1, 1, 1, 0.25)
texture = ExtResource("4_y43om")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_q5kuc")

[node name="Stomps cooldown" type="Timer" parent="Area2D"]

[node name="Stomps" type="RichTextLabel" parent="."]
offset_left = 132.0
offset_top = 128.0
offset_right = 200.0
offset_bottom = 168.0
text = "0/5"

[node name="Lightning" type="Node" parent="."]

[node name="Lightning" type="ColorRect" parent="Lightning"]
material = SubResource("ShaderMaterial_8q7ar")
offset_left = 320.0
offset_top = 132.0
offset_right = 640.0
offset_bottom = 230.0
script = ExtResource("3_30nep")

[node name="Lightning2" type="ColorRect" parent="Lightning"]
material = SubResource("ShaderMaterial_8q7ar")
offset_left = 320.0
offset_top = 24.0
offset_right = 640.0
offset_bottom = 122.0
script = ExtResource("3_30nep")

[node name="LightningHoriz" type="ColorRect" parent="Lightning"]
material = SubResource("ShaderMaterial_o0xpl")
offset_left = 728.0
offset_right = 956.0
offset_bottom = 100.0
rotation = -4.71238
scale = Vector2(1, 3.1845)
script = ExtResource("8_qnjbp")

[node name="LightningHoriz2" type="ColorRect" parent="Lightning"]
material = SubResource("ShaderMaterial_o0xpl")
offset_left = 544.0
offset_right = 772.0
offset_bottom = 100.0
rotation = -4.71238
scale = Vector2(1, 3.1845)
script = ExtResource("8_qnjbp")

[node name="Block" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 1)
position = Vector2(480, 114)
scale = Vector2(320, 228)
texture = SubResource("CanvasTexture_ufmxc")

[connection signal="mouse_entered" from="Area2D" to="Area2D" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="Area2D" method="_on_mouse_exited"]
[connection signal="timeout" from="Area2D/Stomps cooldown" to="Area2D" method="_on_stomps_cooldown_timeout"]
